# Structure-of-white-dwarf-stars

./: .gitignore  CMakeLists.txt  Makefile  README.md  proj_2 (original 2).c  proj_2.c  proj_2_fancy.c  proj_2_messed_up.c
